<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.accenture.weathering.MainActivity"/>
    </data>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:padding="15dp"
            android:background="@color/error_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/radius"
                    android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_search_city"
                    android:layout_width="@dimen/image_width_50"
                    android:layout_height="match_parent"
                    android:padding="@dimen/average_padding"
                    android:src="@drawable/ic_baseline_search_24"
                    android:contentDescription="@string/search_bar" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconMode="clear_text">

                        <EditText
                            android:id="@+id/edt_city_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="City Name"
                            android:background="@drawable/radius"
                            android:hint="@string/enter_location"
                            android:inputType="text"
                            android:imeOptions="actionSearch"
                            android:lines="1"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/night_mode_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/overviewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/weatherContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weather_main"
                            android:textAllCaps="true"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/address_text_size" />

                        <TextView
                            android:id="@+id/tv_main_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/condition_main"
                            android:textColor="@color/white"
                            android:textSize="@dimen/updated_date_label" />

                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/temperature_29_c"
                        android:textColor="@color/white"
                        android:textSize="@dimen/temperature_text_size" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/detailsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/average_padding"
                        android:layout_margin="@dimen/text_padding"
                        android:layout_gravity="center"
                        android:weightSum="3"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="@dimen/space_5"
                            android:layout_marginBottom="@dimen/time_text_size"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:id="@+id/img_weather_pictures"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:contentDescription="@string/weather_picture" />

                            <TextView
                                android:id="@+id/tv_city_code"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/city_code"
                                android:textSize="@dimen/sunrise_text_size"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_city_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:text="@string/Manila_label"
                                android:textSize="@dimen/time_text_size" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="@dimen/text_padding"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:layout_width="@dimen/image_width_25"
                                android:layout_height="@dimen/image_width_25"
                                android:src="@drawable/humidity"
                                android:contentDescription="@string/humid_label" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textStyle="bold"
                                android:textSize="@dimen/sunrise_text_size" />

                            <TextView
                                android:id="@+id/tv_humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humid_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/time_text_size" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="@dimen/image_width_25"
                                android:layout_height="@dimen/image_width_25"
                                android:src="@drawable/wind"
                                android:contentDescription="@string/wind" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textStyle="bold"
                                android:textSize="@dimen/sunrise_text_size" />

                            <TextView
                                android:id="@+id/tv_wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_label_0_82"
                                android:textStyle="bold"
                                android:textSize="@dimen/updated_date_label" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_5"
                        android:weightSum="3"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="@dimen/space_5"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:src="@drawable/equator"
                                android:contentDescription="@string/equator_image" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_12" />

                            <TextView
                                android:id="@+id/tv_lat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/updated_date_label" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="@dimen/space_5"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_sunrise"
                                android:contentDescription="@string/sunset_image" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_12" />

                            <TextView
                                android:id="@+id/tv_sunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise_image_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/updated_date_label" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/background_label"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_sunset"
                                android:contentDescription="@string/sunset_image" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_12" />

                            <TextView
                                android:id="@+id/tv_sunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset_image_label"
                                android:textStyle="bold"
                                android:textSize="@dimen/updated_date_label" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>