<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_day">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.Toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_find_city_weather"
                    style="@style/SearchViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:hint="@string/enter_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_label_search_for_city"
            style="@style/TextViewHeaderStyle"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_bubble"
            android:gravity="center"
            android:text="@string/search_for_a_place"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginEnd="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/image_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_search_for_city" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_showing_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_searched_city_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_searched_city" />

                <ImageView
                    android:id="@+id/image_weather_symbol"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/square_rounded_shape_bg"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/weather_picture"
                    app:layout_constraintBottom_toBottomOf="@+id/text_todays_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_label_today" />

                <TextView
                    android:id="@+id/text_label_today"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/today"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/image_weather_symbol"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_searched_city_temperature" />

                <TextView
                    android:id="@+id/text_todays_date"
                    style="@style/TextViewNormalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/text_label_today"
                    app:layout_constraintTop_toBottomOf="@+id/text_label_today"
                    tools:text="Tues, 20 Sep" />

                <TextView
                    android:id="@+id/text_temperature"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="84sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
                    tools:text="24" />

                <TextView
                    android:id="@+id/text_label_degree"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/temperature_c"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature" />

                <TextView
                    android:id="@+id/text_city_name"
                    style="@style/TextViewBodyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temperature"
                    tools:text="@string/Manila_label" />

                <ImageView
                    android:id="@+id/image_weather_human_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="@dimen/image_width_25"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/weather_picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_city_name"
                    tools:srcCompat="@drawable/cf_sunny" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>